# openGLTestbed2

./: .gitignore  CMakeLists.txt  Camera.h  Cloudfragment.glsl  Color.h  Cylinder.cpp  Cylinder.h  Dragonfly.cpp  Dragonfly.h  Icosahedron.cpp  Icosahedron.h  LightCube.cpp  LightCube.h  Parallelogram .cpp  Parallelogram.cpp  Parallelogram.h  Prim_base.cpp  Prim_base.h  README  Readme.md  Shader.h  Sphere.cpp  Sphere.h  box.cpp  box.h  dflyGen.cpp  dflyGen.h  ellipse.cpp  ellipse.h  extra_funcs.cpp  extra_funcs.h  filesystem.h  fragment.glsl  fragment.shader  glad.cpp  khrplatform.h  main.cpp  makefile  primatives.cpp  primatives.h  (+4 more)
submission/: Color.cpp  DflyPos.h  Dragonfly.cpp  Parallelogram.h  README  Readme.md  box.cpp  ellipse.cpp  ellipse.h  extra_funcs.h  final  fragment.glsl  glad.h  main.cpp  makefile  primatives.cpp  primatives.h  vertex.glsl
